// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`numberInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
      >
        <div>
          <div
            class="uv_1ce7gb6k uv_1ce7gb6l uv_1ce7gb6o"
            data-controls="true"
            data-disabled="false"
            data-error="false"
            data-size="large"
            data-success="false"
            data-unit="false"
          >
            <div
              class="uv_1ce7gb60 uv_xf61n40 uv_xf61n4d uv_xf61n42d uv_xf61n461"
              data-size="large"
            >
              <button
                class="uv_8xt08s0 uv_8xt08s1 uv_8xt08s3 uv_8xt08s8 uv_8xt08sg uv_8xt08sj uv_8xt08s19"
                tabindex="-1"
                type="button"
              >
                <span
                  class="uv_u0p5n50"
                >
                  minus
                </span>
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="uv_1ce7gb63 uv_1w3vbem0 uv_1w3vbemd uv_1w3vbem61"
              style="--uv_85qyp70: 1fr auto; --uv_85qyp71: 1fr auto; --uv_85qyp72: 1fr auto; --uv_85qyp73: 1fr auto; --uv_85qyp74: 1fr auto; --uv_85qyp75: 1fr auto;"
            >
              <input
                class="uv_1ce7gb6c uv_1ce7gb6e uv_1ce7gb6g"
                id="_r_0_"
                inputmode="decimal"
                max="9007199254740991"
                min="0"
                name="test"
                placeholder=""
                type="number"
              />
            </div>
            <div
              class="uv_1ce7gb60 uv_xf61n40 uv_xf61n4d uv_xf61n42d uv_xf61n461"
              data-size="large"
            >
              <button
                class="uv_8xt08s0 uv_8xt08s1 uv_8xt08s3 uv_8xt08s8 uv_8xt08sg uv_8xt08sj uv_8xt08s19"
                tabindex="-1"
                type="button"
              >
                <span
                  class="uv_u0p5n50"
                >
                  plus
                </span>
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`numberInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
      >
        <div>
          <div
            class="uv_1ce7gb6k uv_1ce7gb6l uv_1ce7gb6p"
            data-controls="true"
            data-disabled="true"
            data-error="false"
            data-size="large"
            data-success="false"
            data-unit="false"
          >
            <div
              class="uv_1ce7gb60 uv_xf61n40 uv_xf61n4d uv_xf61n42d uv_xf61n461"
              data-size="large"
            >
              <button
                class="uv_8xt08s0 uv_8xt08s2 uv_8xt08s3 uv_8xt08s8 uv_8xt08sg uv_8xt08sj uv_8xt08s19"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="uv_u0p5n50"
                >
                  minus
                </span>
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="uv_1ce7gb63 uv_1w3vbem0 uv_1w3vbemd uv_1w3vbem61"
              style="--uv_85qyp70: 1fr auto; --uv_85qyp71: 1fr auto; --uv_85qyp72: 1fr auto; --uv_85qyp73: 1fr auto; --uv_85qyp74: 1fr auto; --uv_85qyp75: 1fr auto;"
            >
              <input
                aria-label="Number Input"
                class="uv_1ce7gb6c uv_1ce7gb6e uv_1ce7gb6g"
                disabled=""
                id="_r_8_"
                inputmode="decimal"
                max="9007199254740991"
                min="0"
                name="test"
                placeholder=""
                type="number"
              />
            </div>
            <div
              class="uv_1ce7gb60 uv_xf61n40 uv_xf61n4d uv_xf61n42d uv_xf61n461"
              data-size="large"
            >
              <button
                class="uv_8xt08s0 uv_8xt08s2 uv_8xt08s3 uv_8xt08s8 uv_8xt08sg uv_8xt08sj uv_8xt08s19"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="uv_u0p5n50"
                >
                  plus
                </span>
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
